[gd_scene load_steps=11 format=2]

[ext_resource path="res://fontlar/youngserif-regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://resimler/giris_buton_basili.webp" type="Texture" id=2]
[ext_resource path="res://resimler/giris_buton_normal.webp" type="Texture" id=3]
[ext_resource path="res://resimler/esya_popup_arkaplan.webp" type="Texture" id=4]
[ext_resource path="res://resimler/giris_buton_disabled.webp" type="Texture" id=5]
[ext_resource path="res://sceneler/tali_sahneler/EsyaPopup.gd" type="Script" id=6]
[ext_resource path="res://resimler/cikis.webp" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 23
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 30
use_filter = true
font_data = ExtResource( 1 )

[node name="Control" type="Popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -300.0
margin_right = 200.0
margin_bottom = 300.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="TextureRect"]
self_modulate = Color( 0, 0, 0, 0.647059 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -171.0
margin_top = -270.5
margin_right = 171.0
margin_bottom = 274.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 29.0
margin_top = 31.0
margin_right = -29.0
margin_bottom = -24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EsyaCenter" type="CenterContainer" parent="TextureRect/VBoxContainer"]
margin_right = 342.0

[node name="CenterContainer2" type="CenterContainer" parent="TextureRect/VBoxContainer"]
margin_top = 4.0
margin_right = 342.0
margin_bottom = 40.0
size_flags_horizontal = 3

[node name="EsyaIsmi" type="Label" parent="TextureRect/VBoxContainer/CenterContainer2"]
margin_left = 21.0
margin_right = 321.0
margin_bottom = 36.0
rect_min_size = Vector2( 300, 0 )
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_editor_description_": ""
}

[node name="CenterContainer3" type="CenterContainer" parent="TextureRect/VBoxContainer"]
margin_top = 44.0
margin_right = 342.0
margin_bottom = 72.0
size_flags_horizontal = 3

[node name="EsyaAciklamasi" type="Label" parent="TextureRect/VBoxContainer/CenterContainer3"]
margin_left = 21.0
margin_right = 321.0
margin_bottom = 28.0
rect_min_size = Vector2( 300, 0 )
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_editor_description_": ""
}

[node name="CenterContainer5" type="CenterContainer" parent="TextureRect/VBoxContainer"]
margin_top = 76.0
margin_right = 342.0
margin_bottom = 480.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NeIseYaradigi" type="Label" parent="TextureRect/VBoxContainer/CenterContainer5"]
margin_left = 21.0
margin_top = 184.0
margin_right = 321.0
margin_bottom = 220.0
rect_min_size = Vector2( 300, 0 )
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_editor_description_": ""
}

[node name="CenterContainer4" type="CenterContainer" parent="TextureRect/VBoxContainer"]
margin_top = 484.0
margin_right = 342.0
margin_bottom = 545.0

[node name="Use" type="TextureButton" parent="TextureRect/VBoxContainer/CenterContainer4"]
margin_left = 71.0
margin_right = 271.0
margin_bottom = 61.0
disabled = true
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
texture_disabled = ExtResource( 5 )

[node name="Label" type="Label" parent="TextureRect/VBoxContainer/CenterContainer4/Use"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
text = "Use"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -80.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
custom_constants/margin_right = 0
custom_constants/margin_top = 30
custom_constants/margin_left = 11
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CikisButon" type="TextureButton" parent="MarginContainer"]
margin_left = 11.0
margin_top = 30.0
margin_right = 80.0
margin_bottom = 80.0
texture_normal = ExtResource( 7 )

[connection signal="onay" from="." to="." method="_on_Control_onay"]
[connection signal="popup_hide" from="." to="." method="_on_Control_popup_hide"]
[connection signal="pressed" from="TextureRect/VBoxContainer/CenterContainer4/Use" to="." method="_on_Use_pressed"]
[connection signal="pressed" from="MarginContainer/CikisButon" to="." method="_on_CikisButon_pressed"]
